[tool.poetry]
name = "vultr-cloud-forecast"
version = "0.1.0"
description = "AI-powered cost forecasting for cloud services"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0"
requests = "^2.28"
scikit-learn = "^1.2"
prophet = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"  # Optional: If you use pytest for testing
